<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.picmg</groupId>
    <artifactId>configurator</artifactId>
	<version>alpha</version>
    <properties>
      	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      	<maven.compiler.source>1.8</maven.compiler.source>
   	  	<maven.compiler.target>1.8</maven.compiler.target>
		<maven.test.skip>true</maven.test.skip>
	</properties>
	<dependencies>
		<dependency>
	    	<groupId>org.openjfx</groupId>
	    	<artifactId>javafx-controls</artifactId>
	    	<version>16</version>
	  	</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<classifier>win</classifier>
			<version>16</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<classifier>mac</classifier>
			<version>16</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<classifier>mac</classifier>
			<version>16</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<classifier>linux</classifier>
			<version>16</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<classifier>linux</classifier>
			<version>16</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
			</plugin>
			<plugin>
	        	<groupId>org.openjfx</groupId>
	        	<artifactId>javafx-maven-plugin</artifactId>
	        	<version>0.0.8</version>
				<configuration>
	            	<mainClass>org.picmg.configurator.Main</mainClass>
					<compress>2</compress>
					<noHeaderFiles>true</noHeaderFiles>
					<stripDebug>true</stripDebug>
					<noManPages>true</noManPages>
					<launcher>configurator</launcher>
					<jlinkImageName>configurator</jlinkImageName>
					<jlinkZipName>configurator</jlinkZipName>
					<jlinkVerbose>true</jlinkVerbose>
	        	</configuration>
	    	</plugin>
	    	<plugin>
	      		<!-- Build an executable JAR -->
	      		<groupId>org.apache.maven.plugins</groupId>
	      		<artifactId>maven-jar-plugin</artifactId>
	      		<version>3.1.0</version>
	      		<configuration>
	        		<archive>
	          			<manifest>
	            			<addClasspath>true</addClasspath>
	            			<mainClass>org.picmg.configurator.Main</mainClass>
	          			</manifest>
	        		</archive>
	      		</configuration>
	    	</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<configuration>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>org.picmg.configurator.Main</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>